<resources>
    <string name="app_name">FoundMyPet</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="title_email">Correo:</string>
    <string name="title_user_name">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm">Confirmar</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="title_user_profile">User Profile</string>
    <string name="profile_name">Carla</string>
    <string name="title_location">COCHABAMBA, BOLIVIA</string>
    <string name="title_contact">Contacto:</string>
    <string name="title_cellphone">Telefono:</string>
    <string name="title_cellphone_number">+591 70859812</string>
    <string name="title_email_address">Carla_Almanza_Alcocer@gmail.com</string>
    <string name="image_profile">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_post">Aceptar</string>

    <string name="create_lostPet_post_tittle_hint">Titulo de la publicacion</string>
    <string name="create_lostPet_post_name_label">Nombre:</string>
    <string name="create_lostPet_post_race_label">Raza:</string>
    <string name="create_lostPet_post_species_label">Especie:</string>
    <string name="create_lostPet_post_color_label">Color:</string>
    <string name="create_lostPet_post_lost_date_label">Fecha de desaparecido:</string>
    <string name="create_lostPet_post_last_seen_label">Visto por ultima vez en:</string>
    <string name="create_lostPet_post_contact_phone_label">Numero de contacto(s):</string>
    <string name="recuerdame">RECUERDAME</string>
    <string name="no_tienes_cuenta">¿NO TIENES CUENTA?</string>
    <string name="registrate">REGISTRATE</string>
    <string name="todo">TODO</string>
    <string name="acepto_los_terminos_y_condiciones">ACEPTO LOS TERMINOS Y CONDICIONES</string>

    <string name="title_looking_dog">Se Busca Perrito</string>
    <string name="title_user_name_post_page">Augusto Valdez</string>
    <string name="title_time_published_post_page">Hace 4 h</string>
    <string name="title_name_pet_post_page">Nombre: </string>
    <string name="title_name_pet_lost_post_page">MAX</string>
    <string name="title_breed_post_page">Raza:</string>
    <string name="title_breed_pet_lost_post_page">Mestizo</string>
    <string name="title_color_post_page">Colores:</string>
    <string name="title_color_pet_lost_post_page">Mostaza</string>
    <string name="title_date_lost_post_page">Fecha de Desaparecido</string>
    <string name="title_date_lost_pet_post_page">25 Julio 2020</string>
    <string name="title_last_seen_post_page">Visto por ultima vez en:</string>
    <string name="title_last_seen_address_post_page">Av. Blanco Galindo km 6</string>
    <string name="title_number_contact_post_page">Numero de contacto(s):</string>
    <string name="title_number_contact_of_user_post_page">75822674 - 4434513</string>
    <string name="title_description_post_page">Description:</string>
    <string name="title_description_place_post_page">Salio de mi casa por la 6 de agosto...</string>


    <string name="sidebar_text_menu">Menu</string>
    <string name="sidebar_menu_string">Inicio</string>
    <string name="sidebar_edit_post_string">Editar Post</string>
    <string name="sidebar_lost_pets_string">Mascotas Perdidas</string>
    <string name="sidebar_found_pets_string">Mascotas Encontradas</string>
    <string name="sidebar_happy_pets_string">Mascotas Felices</string>
    <string name="sidebar_configuration_string">Configuracion</string>
    <string name="sidebar_end_session_string">Cerrar Sesion</string>
    <string name="email">Correo</string>

    <string name="add_nav">Añadir</string>
    <string name="home_nav">Inicio</string>
    <string name="search_nav">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_label_found_pet_create_type_post">¿Encontraste una mascota?</string>
    <string name="btn_label_lost_pet_create_type_post">¿Perdiste una mascota?</string>
    <string name="title_species_name_post_page">Especie:</string>
    <string name="species_name_post_page">Perro</string>
    <string name="Image">image</string>
    <string name="create_lostPet_post_description_label">Descripcion:</string>
    <string name="profile_user_name">-</string>
    <string name="profile_user_department">CityName</string>
    <string name="profile_location_symbol">|</string>
    <string name="profile_user_country">CountryName</string>
    <string name="profile_separation_symbol"> | </string>
    <string name="change_profile_image">Cambiar Foto</string>
    <string name="edit_city_field">Ciudad</string>
    <string name="edit_country_field">Pais</string>
    <string name="edit_cellphone_number">Telefono</string>
    <string name="edit_email">Correo</string>

</resources>