<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004d69"
    tools:context=".PostPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_title_looking_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/title_looking_dog"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline37"
                app:layout_constraintStart_toStartOf="@+id/guideline34"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImagePost"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline37"
                app:layout_constraintStart_toStartOf="@+id/guideline34"
                app:layout_constraintTop_toBottomOf="@+id/text_title_looking_dog">

                <ImageView
                    android:id="@+id/image_post_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/perro_surf" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="@color/Cian"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline37"
                app:layout_constraintStart_toStartOf="@+id/guideline34"
                app:layout_constraintTop_toBottomOf="@+id/cardViewImagePost">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintGuide_begin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintGuide_end="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_user_profile_post_page"
                        android:layout_width="66dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/fotopersonacomun" />

                    <TextView
                        android:id="@+id/text_species_post_page"
                        android:layout_width="0dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/species_name_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_species_name_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_species_name_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_species_name_post_page" />

                    <TextView
                        android:id="@+id/text_user_name_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:text="@string/title_user_name_post_page"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/image_user_profile_post_page"
                        app:layout_constraintStart_toEndOf="@+id/image_user_profile_post_page"
                        app:layout_constraintTop_toTopOf="@+id/image_user_profile_post_page"
                        app:layout_constraintVertical_bias="0.487" />

                    <TextView
                        android:id="@+id/text_species_name_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_species_name_post_page"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_name_post_page" />

                    <TextView
                        android:id="@+id/text_time_published_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:text="@string/title_time_published_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_user_name_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_user_name_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_user_name_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_name_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_name_pet_post_page"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/image_user_profile_post_page" />

                    <TextView
                        android:id="@+id/text_name_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_name_pet_lost_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_name_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_name_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_name_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_breed_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_breed_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_name_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_species_name_post_page" />

                    <TextView
                        android:id="@+id/text_breed_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_breed_pet_lost_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_breed_post_page"
                        app:layout_constraintStart_toEndOf="@+id/text_title_breed_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_breed_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_color_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_color_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_breed_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_breed_post_page" />

                    <TextView
                        android:id="@+id/text_color_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_color_pet_lost_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_color_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_color_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_color_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_date_lost_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_date_lost_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_color_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_color_post_page" />

                    <TextView
                        android:id="@+id/text_date_lost_post_profile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_date_lost_pet_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_date_lost_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_date_lost_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_date_lost_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_last_seen_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/title_last_seen_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_date_lost_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_date_lost_post_page" />

                    <TextView
                        android:id="@+id/text_last_seen_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_last_seen_address_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_last_seen_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_last_seen_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_last_seen_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_number_contact_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/title_number_contact_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_last_seen_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_last_seen_post_page" />

                    <TextView
                        android:id="@+id/text_number_contact_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/title_number_contact_of_user_post_page"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title_number_contact_post_page"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_number_contact_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_number_contact_post_page"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/text_title_description_post_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/title_description_post_page"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/text_title_number_contact_post_page"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline33"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_number_contact_post_page" />

                    <TextView
                        android:id="@+id/text_description_post_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/title_description_place_post_page"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline35"
                        app:layout_constraintStart_toEndOf="@+id/text_title_description_post_page"
                        app:layout_constraintTop_toTopOf="@+id/text_title_description_post_page" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>